--- a/index.html
+++ b/index.html
@@ -13,9 +13,9 @@
 
     <div id="navigation">
       <ul>
-        <li><a href=""></a></li>
-        <li><a href=""></a></li>
-        <li><a href=""></a></li>
+        <li><a href="">1</a></li>
+        <li><a href="">2</a></li>
+        <li><a href="">3</a></li>
       </ul>
     </div>
   </div>
