--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 
 <div id="container">
   <div id="header">
-    <h1><a href="/">heroku-static-site</a></h1>
+    <h1><a href="/">Queep-Bot</a></h1>
 
     <div id="navigation">
       <ul>
