--- a/index.html
+++ b/index.html
@@ -6,9 +6,12 @@
     <title>Queep Bot</title>
     <link href="https://fonts.googleapis.com/css?family=Open+Sans:400" rel="stylesheet">
     <link href="./css/bootstrap.min.css" rel="stylesheet" id="bootstrap-css">
-    <link href="./css/admin.css" rel="stylesheet">
+    <link href="./css/main.css" rel="stylesheet">
+    <link href="./css/highlights.css" rel="stylesheet">
     <script src=https://code.jquery.com/jquery-3.3.1.min.js></script>
-
+    <script src=./js/word_acro.js></script>
+    <script src=./js/queep.js></script>
+    <script src="http://livejs.com/live.js"></script>
 </head>
 
 
@@ -39,14 +42,4 @@
 
     </div> <!-- container-->
 </body>
-<script>
-
-$('#input').on('input propertychange paste',function(){
-$('#output').html($('#input').val());
-
-});
-
-
-</script>
-
 </html>
