--- a/index.html
+++ b/index.html
@@ -4,6 +4,10 @@
 <head>
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
     <title>Queep Bot</title>
+    <link rel="stylesheet" href="https://code.jquery.com/ui/1.12.1/themes/base/jquery-ui.css">
+    <script src="https://code.jquery.com/jquery-1.12.4.js"></script>
+    <script src="https://code.jquery.com/ui/1.12.1/jquery-ui.js"></script>
+  
     <link href="https://fonts.googleapis.com/css?family=Open+Sans:400" rel="stylesheet">
     <link href="./css/bootstrap.min.css" rel="stylesheet" id="bootstrap-css">
     <link href="./css/main.css" rel="stylesheet">
@@ -12,6 +16,7 @@
     <script src=./js/word_acro.js></script>
     <script src="https://unpkg.com/tippy.js@3/dist/tippy.all.min.js"></script>
     <script src=./js/queep.js></script>
+
     <script src="http://livejs.com/live.js"></script>
 </head>
 
