--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     <script src="https://unpkg.com/tippy.js@3/dist/tippy.all.min.js"></script>
     <script src=./js/queep.js></script>
 
-    <script src="http://livejs.com/live.js"></script>
+    <script src="https://livejs.com/live.js"></script>
 </head>
 
 
