Some quote-unquote '''real content'''

--- a/index.html
+++ b/index.html
@@ -9,13 +9,12 @@
 
 <div id="container">
   <div id="header">
-    <h1><a href="/">heroku-static-site</a></h1>
+    <h1>heroku-static-site</h1>
 
     <div id="navigation">
       <ul>
-        <li><a href=""></a></li>
-        <li><a href=""></a></li>
-        <li><a href=""></a></li>
+        <li><a href="https://github.com/jamiew/heroku-static-site">GitHub</a></li>
+        <li><a href="https://jamiedubs.com">jamiedubs.com</a></li>
       </ul>
     </div>
   </div>
@@ -24,7 +23,7 @@
   <div id="main">
 
     <div id="description">
-      <h2>What's the idea?</h2>
+      <h2>Is computer on?</h2>
       <p>Yep</p>
     </div>
   </div>
