Make things better

--- a/index.html
+++ b/index.html
@@ -10,17 +10,16 @@
 <div id="container">
   <div id="header">
     <h1>heroku-static-site</h1>
+  </div>
 
+  <div id="main">
     <div id="navigation">
+			<h2>Cool links</h2>
       <ul>
-        <li><a href="https://github.com/jamiew/heroku-static-site">GitHub</a></li>
+        <li><a href="https://github.com/jamiew/heroku-static-site">GitHub repository</a></li>
         <li><a href="https://jamiedubs.com">jamiedubs.com</a></li>
       </ul>
     </div>
-  </div>
-
-
-  <div id="main">
 
     <div id="description">
       <h2>Is computer on?</h2>
@@ -29,8 +28,7 @@
   </div>
 
   <div id="footer">
-    &copy; 2013 No Rights Reserved.
-
+    &copy; 2013-2019
   </div>
 </div>
 
