color theme changed & Auto year update script added

--- a/index.html
+++ b/index.html
@@ -5,30 +5,38 @@
   <script src="js/application.js" type="text/javascript" charset="utf-8"></script>
 
 </head>
-<body>
+<body style="background-color: black">
 
 <div id="container">
   <div id="header">
-    <h1>heroku-static-site</h1>
+    <h1 style="color: aliceblue ;font-family: fangsong; text-decoration: underline;" >Heroku-static-site</h1>
   </div>
 
   <div id="main">
     <div id="navigation">
-			<h2>Cool links</h2>
+			<h2 style="color: aliceblue ;font-family: fangsong;" >Cool links</h2>
       <ul>
-        <li><a href="https://github.com/jamiew/heroku-static-site">GitHub repository</a></li>
-        <li><a href="https://jamiedubs.com">jamiedubs.com</a></li>
+        <li style="color: aliceblue ;font-family: fangsong;"><a style="color: aliceblue ;font-family: fangsong;" href="https://github.com/jamiew/heroku-static-site">GitHub repository</a></li>
+        <li style="color: aliceblue ;font-family: fangsong;"><a style="color: aliceblue ;font-family: fangsong;" href="https://jamiedubs.com">jamiedubs.com</a></li>
       </ul>
     </div>
 
     <div id="description">
-      <h2>Is computer on?</h2>
-      <p>Yep</p>
+      <h2 style="color: aliceblue ;font-family: fangsong; ">Check out now</h2>
+
+     
     </div>
   </div>
 
-  <div id="footer">
-    &copy; 2013-2019
+  <div id="footer" style="color: aliceblue ; padding-top: 250px;
+  font-size: x-large;">
+  <hr>
+       &copy; <script type="text/javascript">
+          var today = new Date()
+          var year = today.getFullYear()
+           document.write(year)
+    </script>
+    <h1 style="color: aliceblue ;font-family: fangsong;     font-size: initial;   ">copright rights</h1>
   </div>
 </div>
 
